<resources>
    <string name="app_name">WhatChat</string>
    <string name="action_settings">Settings</string>
    <string name="follow_user_error">follow_user_error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_logged_out_error">No esta logueado</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>

    <string name="stringTerms" translatable="false">By continuing you agree to our\n
        <a href="https://ec-social-app.firebaseapp.com/#/privacy">Terms</a> &amp;
        <a href="https://ec-social-app.firebaseapp.com/#/privacy">Privacicty Policy</a>.
    </string>
    <string name="sigin">Mensaje de inicio</string>

    <string name="facebook_app_id" translatable="false">217009489025189</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb217009489025189</string>
    <string name="frgChat">CHATS</string>
    <string name="frgCall">Llamadas</string>
    <string name="message_logout">Log out</string>
    <string name="choose_someone">Choose someone...</string>
    <string name="background_image">Background Image</string>
    <string name="icon_app">Icon App</string>
    <string name="welcomeMessage">Bienvenido a stories!</string>
    <string name="contentWelcome">Cuentanos tu mejor historia</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="camera">Camera</string>
    <string name="nameFactory">NanoPixel, Ecuador</string>
    <string name="userNameDefault">Jhon Doe</string>
    <string name="loadingText">cargando...</string>
    <string name="followText">Follow</string>
    <string name="exitText">exit</string>
    <string name="chatSuggestion">Add a comment here</string>
    <string name="emoji_iconText">Emoji Icon</string>
    <string name="message_status">Message Status</string>
    <string name="messageText">mensaje...</string>
    <string name="messageDefaultText">hola</string>
    <string name="chatDefaultMessage">hi man, how are you?</string>
    <string name="hourDefault">11:40</string>
    <string name="chatDefaultText2">hello, hello!</string>
</resources>
