<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degraded_black_up_down"
        android:rotation="180" />

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_above="@id/base"
        android:layout_centerHorizontal="true"
        android:layout_margin="64dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/icon_app" />

    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/terms"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.stories.up.ec.pikapstudio.up.Activity.PhothoUpload.NewPostActivity"
        tools:showIn="@layout/activity_login">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcomeMessage"
                android:textColor="@color/dirtyWhite"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/contentWelcome"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sigin"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#fff" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bt_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/FrameLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/login_facebook_per"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorWhite"
                        android:drawableStart="@drawable/vector_facebook"
                        android:drawablePadding="8dp"
                        android:text="@string/facebook"
                        android:textColor="@color/com_facebook_blue" />
                </FrameLayout>

                <Button
                    android:id="@+id/login_google"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableStart="@drawable/vector_google"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/md_red_600"
                    android:text="@string/google"
                    android:textColor="@color/md_red_600" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailSubject" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#f44336"
                android:drawableStart="@drawable/vector_mail"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorWhite"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:text="@string/e_mail"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="16dp"
        android:text="@string/stringTerms"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

</RelativeLayout>
