<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/comment_author_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/userNameDefault"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/comment_author_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:maxWidth="240dp"
        android:text="@string/chatDefaultMessage"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/comment_author_icon"
        app:layout_constraintTop_toBottomOf="@+id/comment_name" />

    <TextView
        android:id="@+id/comment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/hourDefault"
        android:textStyle="bold"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_text" />

</androidx.constraintlayout.widget.ConstraintLayout>