<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.ChatRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileThumbnail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="centerCrop"
                android:src="@drawable/vector_alert_profile" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/like_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userNameDefault"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingText" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/chip_like"
            android:text="@string/followText"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/exit_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:rotation="180"
            android:src="@drawable/vector_details"
            android:visibility="gone"
            android:contentDescription="@string/exitText" />

        <ImageView
            android:id="@+id/exit_mess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/vector_x"
            android:contentDescription="@string/exitText" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_weight="0"
        android:background="#CCC" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/vector_down"
        android:visibility="gone"
        app:borderWidth="0dp"
        app:elevation="3dp"
        app:fabSize="mini" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_weight="0"
        android:background="#CCC" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/send_photo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:tint="@color/colorNoSelect"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/vector_camera"
            android:contentDescription="@string/camera" />

        <com.vanniktech.emoji.EmojiEditText
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/send_photo"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toStartOf="@+id/send_comment"
            android:background="@drawable/chip_border_white"
            android:hint="@string/chatSuggestion"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/commentText"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/vector_emoji"
            android:contentDescription="@string/emoji_iconText" />


        <LinearLayout
            android:id="@+id/layout_chat_audio_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/chat_audio_record_bucket_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_menu_delete" />

            <Chronometer
                android:id="@+id/chat_audio_record_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/chat_audio_record_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="To cancel"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/send_comment"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:tint="@color/colorNoSelect"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/vector_arrow" />

    </RelativeLayout>

</LinearLayout>
